added pagination with ordering for equipment & tests
