# swagger/handlers/equipment.go
@@ -2,6 +2,9 @@ package handlers
 
 import (
 	"errors"
+	"git.epam.com/epm-lstr/epm-lstr-lc/be/ent/order"
+	"git.epam.com/epm-lstr/epm-lstr-lc/be/internal/utils"
+	"math"
 	"net/http"
 
 	"github.com/go-openapi/runtime/middleware"
@@ -111,18 +114,30 @@ func (c Equipment) DeleteEquipmentFunc(repository repositories.EquipmentReposito
 func (c Equipment) ListEquipmentFunc(repository repositories.EquipmentRepository) equipment.GetAllEquipmentHandlerFunc {
 	return func(s equipment.GetAllEquipmentParams, access interface{}) middleware.Responder {
 		ctx := s.HTTPRequest.Context()
-		equipments, err := repository.AllEquipments(ctx)
+		limit := utils.GetParamInt(s.Limit, math.MaxInt)
+		offset := utils.GetParamInt(s.Offset, 0)
+		orderBy := utils.GetParamString(s.OrderBy, utils.AscOrder)
+		orderColumn := utils.GetParamString(s.OrderColumn, order.FieldID)
+		total, err := repository.AllEquipmentsTotal(ctx)
 		if err != nil {
-			c.logger.Error("Error while getting all equipments", zap.Error(err))
+			c.logger.Error("Error while getting total of all equipments", zap.Error(err))
 			return equipment.NewGetAllEquipmentDefault(http.StatusInternalServerError).
-				WithPayload(buildStringPayload("Error while getting all equipments"))
+				WithPayload(buildStringPayload("Error while getting total of all equipments"))
 		}
-		if len(equipments) == 0 {
-			c.logger.Error("No equipments found")
-			return equipment.NewGetAllEquipmentDefault(http.StatusNotFound).
-				WithPayload(buildStringPayload("No equipments found"))
+		var equipments []*ent.Equipment
+		if total > 0 {
+			equipments, err = repository.AllEquipments(ctx, limit, offset, orderBy, orderColumn)
+			if err != nil {
+				c.logger.Error("Error while getting all equipments", zap.Error(err))
+				return equipment.NewGetAllEquipmentDefault(http.StatusInternalServerError).
+					WithPayload(buildStringPayload("Error while getting all equipments"))
+			}
 		}
-		listEquipment := make([]*models.EquipmentResponse, len(equipments))
+		totalEquipments := int64(total)
+		listEquipment := &models.ListEquipment{
+			Items: make([]*models.EquipmentResponse, len(equipments)),
+			Total: &totalEquipments,
+		}
 		for i, eq := range equipments {
 			tmpEq, errMap := mapEquipmentResponse(eq)
 			if errMap != nil {
@@ -130,7 +145,7 @@ func (c Equipment) ListEquipmentFunc(repository repositories.EquipmentRepository
 				return equipment.NewGetAllEquipmentDefault(http.StatusInternalServerError).
 					WithPayload(buildStringPayload("Error while mapping equipment"))
 			}
-			listEquipment[i] = tmpEq
+			listEquipment.Items[i] = tmpEq
 		}
 		return equipment.NewGetAllEquipmentOK().WithPayload(listEquipment)
 	}
@@ -156,22 +171,34 @@ func (c Equipment) EditEquipmentFunc(repository repositories.EquipmentRepository
 	}
 }
 
-func (c Equipment) FindEquipmentFunc(EquipmentRepo repositories.EquipmentRepository) equipment.FindEquipmentHandlerFunc {
+func (c Equipment) FindEquipmentFunc(repository repositories.EquipmentRepository) equipment.FindEquipmentHandlerFunc {
 	return func(s equipment.FindEquipmentParams, access interface{}) middleware.Responder {
 		ctx := s.HTTPRequest.Context()
+		limit := utils.GetParamInt(s.Limit, math.MaxInt)
+		offset := utils.GetParamInt(s.Offset, 0)
+		orderBy := utils.GetParamString(s.OrderBy, utils.AscOrder)
+		orderColumn := utils.GetParamString(s.OrderColumn, order.FieldID)
 		equipmentFilter := *s.FindEquipment
-		foundEquipment, err := EquipmentRepo.EquipmentsByFilter(ctx, equipmentFilter)
+		total, err := repository.EquipmentsByFilterTotal(ctx, equipmentFilter)
 		if err != nil {
-			c.logger.Error("Error while finding equipment", zap.Error(err))
-			return equipment.NewFindEquipmentDefault(http.StatusInternalServerError).
-				WithPayload(buildStringPayload("Error while finding equipment"))
+			c.logger.Error("Error while getting total of all equipments", zap.Error(err))
+			return equipment.NewGetAllEquipmentDefault(http.StatusInternalServerError).
+				WithPayload(buildStringPayload("Error while getting total of all equipments"))
 		}
-		if len(foundEquipment) == 0 {
-			c.logger.Info("Equipments not found")
-			return equipment.NewFindEquipmentDefault(http.StatusNotFound).
-				WithPayload(buildStringPayload("Equipments not found"))
+		var foundEquipment []*ent.Equipment
+		if total > 0 {
+			foundEquipment, err = repository.EquipmentsByFilter(ctx, equipmentFilter, limit, offset, orderBy, orderColumn)
+			if err != nil {
+				c.logger.Error("Error while finding equipment", zap.Error(err))
+				return equipment.NewFindEquipmentDefault(http.StatusInternalServerError).
+					WithPayload(buildStringPayload("Error while finding equipment"))
+			}
 		}
-		returnEquipment := make([]*models.EquipmentResponse, len(foundEquipment))
+		totalEquipments := int64(total)
+		returnEquipment := &models.ListEquipment{
+			Items: make([]*models.EquipmentResponse, len(foundEquipment)),
+			Total: &totalEquipments,
+		}
 		for i, eq := range foundEquipment {
 			tmpEq, errMap := mapEquipmentResponse(eq)
 			if errMap != nil {
@@ -179,7 +206,7 @@ func (c Equipment) FindEquipmentFunc(EquipmentRepo repositories.EquipmentReposit
 				return equipment.NewFindEquipmentDefault(http.StatusInternalServerError).
 					WithPayload(buildStringPayload("Error while mapping equipment"))
 			}
-			returnEquipment[i] = tmpEq
+			returnEquipment.Items[i] = tmpEq
 		}
 		return equipment.NewFindEquipmentOK().WithPayload(returnEquipment)
 	}
@@ -199,11 +226,11 @@ func mapEquipmentResponse(eq *ent.Equipment) (*models.EquipmentResponse, error) 
 	}
 	statusID := int64(eq.Edges.Status.ID)
 
-	var petKinds []*models.PetKind
-	for _, petKindEdge := range eq.Edges.PetKinds {
+	petKinds := make([]*models.PetKind, len(eq.Edges.PetKinds))
+	for i, petKindEdge := range eq.Edges.PetKinds {
 		petKindID := int64(petKindEdge.ID)
 		petKind := models.PetKind{ID: petKindID, Name: &petKindEdge.Name}
-		petKinds = append(petKinds, &petKind)
+		petKinds[i] = &petKind
 	}
 
 	var petSizeID *int64
